--- a/openhpi/branches/newsimulator/openhpi.conf.example
+++ b/openhpi/branches/newsimulator/openhpi.conf.example
@@ -177,7 +177,7 @@ handler libsimulator {
 #        STANDBY_OA = "hostname" # Standby OA hostname or IP address (optional)
 #}
 
-## Section for new_simulator plugin
+## Section for dynamic_simulator plugin
 #handler libdyn_simulator {
 #        entity_root = "{SYSTEM_CHASSIS,9}"
 ## Location of the simulation data file 
