Fixed first issue for bug #3014969

--- a/openhpi/trunk/utils/t/rpt/Makefile.am
+++ b/openhpi/trunk/utils/t/rpt/Makefile.am
@@ -15,6 +15,7 @@ REMOTE_SOURCES		= rpt_utils.c \
 			  uid_utils.c \
 			  sahpi_enum_utils.c \
 			  sahpiatca_enum_utils.c \
+			  sahpixtca_enum_utils.c \
 			  sahpi_event_encode.c \
 			  sahpi_event_utils.c \
 			  sahpi_struct_utils.c \
