--- a/openhpi/trunk/utils/t/sahpi/Makefile.am
+++ b/openhpi/trunk/utils/t/sahpi/Makefile.am
@@ -13,6 +13,7 @@ MAINTAINERCLEANFILES = Makefile.in
 REMOTE_SOURCES =  epath_utils.c \
 		  sahpi_enum_utils.c \
 		  sahpiatca_enum_utils.c \
+		  sahpixtca_enum_utils.c \
 		  sahpi_event_encode.c \
 		  sahpi_event_utils.c \
 	          sahpi_struct_utils.c \
