--- a/openhpi/trunk/utils/t/epath/Makefile.am
+++ b/openhpi/trunk/utils/t/epath/Makefile.am
@@ -35,6 +35,7 @@ REMOTE_SOURCES = \
 		epath_utils.c \
 		sahpi_enum_utils.c \
 		sahpiatca_enum_utils.c \
+		sahpixtca_enum_utils.c \
 		sahpi_event_encode.c \
 		sahpi_event_utils.c \
 		sahpi_struct_utils.c \
