--- a/openhpi/trunk/Makefile.am
+++ b/openhpi/trunk/Makefile.am
@@ -54,8 +54,8 @@ MAINTAINERCLEANFILES    = Makefile.in aclocal.m4 configure config.guess config.s
 MOSTLYCLEANFILES        = tags
 
 
-SUBDIRS                 = utils scripts @SSLDIR@ @SNMPDIR@ transport marshal baselib plugins docs @ENABLED_DIRS@ hpi_shell
-DIST_SUBDIRS            = utils scripts snmp ssl transport marshal baselib plugins docs openhpid clients cpp hpi_shell
+SUBDIRS                 = utils scripts @SSLDIR@ @SNMPDIR@ transport marshal baselib @ENABLED_DIRS@ plugins docs hpi_shell
+DIST_SUBDIRS            = utils scripts snmp ssl transport marshal baselib openhpid plugins docs clients cpp hpi_shell
 
 
 DISTCHECK_CONFIGURE_FLAGS = --with-initdir=prefix
