--- a/openhpi/trunk/plugins/ipmi/t/Makefile.am
+++ b/openhpi/trunk/plugins/ipmi/t/Makefile.am
@@ -33,12 +33,11 @@ MAINTAINERCLEANFILES 	= Makefile.in
 noinst_PROGRAMS         = ipmi_thres_test
 INCLUDES                = @OPENHPI_INCLUDES@
 
-LD_DIRS			= -L$(top_builddir)/baselib -L$(top_builddir)/utils
-
 #noinst_PROGRAMS         = set_thres
 
 ipmi_thres_test_SOURCES	= ipmi_thres_test.c	
-ipmi_thres_test_LDADD	= $(LD_DIRS) -luuid -lopenhpiutils -lopenhpi
+ipmi_thres_test_LDADD	= $(top_builddir)/utils/libopenhpiutils.la \
+				          $(top_builddir)/openhpid/libopenhpidaemon.la
 
 #set_thres_SOURCES       = set_thres.c
 #set_thres_LDADD        = $(top_builddir)/baselib/libopenhpi.la
