--- a/openhpi/trunk/plugins/simulator/t/Makefile.am
+++ b/openhpi/trunk/plugins/simulator/t/Makefile.am
@@ -15,13 +15,13 @@ INCLUDES		= @OPENHPI_INCLUDES@
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
-TDEPLIB			= $(top_builddir)/baselib/libopenhpi.la \
+TDEPLIB			= $(top_builddir)/openhpid/libopenhpidaemon.la \
 			  $(top_builddir)/utils/libopenhpiutils.la
 
 TESTS_ENVIRONMENT = OPENHPI_PATH=$(top_builddir)/plugins/simulator
 TESTS_ENVIRONMENT += OPENHPI_UID_MAP=$(top_builddir)/plugins/simulator/t/uid_map
 TESTS_ENVIRONMENT += OPENHPI_CONF=$(top_srcdir)/plugins/simulator/t/openhpi.conf
-TESTS_ENVIRONMENT += LD_LIBRARY_PATH=$(top_srcdir)/baselib/.libs:$(top_srcdir)/ssl/.libs:$(top_srcdir)/utils/.libs
+TESTS_ENVIRONMENT += LD_LIBRARY_PATH=$(top_srcdir)/openhpid/.libs:$(top_srcdir)/ssl/.libs:$(top_srcdir)/utils/.libs
 
 TESTS = sim_sanity_000 \
 	sim_sanity_001 \
