Fix for Feature Request 3032998: New client hpidomain for domain information Man entries for hpidomain and hpigensimdata Fix for Bug 3032617: openhpi.conf.example uncomplete Additional log output for ipmidirect at end of initial discovery

--- a/openhpi/trunk/clients/Makefile.am
+++ b/openhpi/trunk/clients/Makefile.am
@@ -12,6 +12,7 @@ COMMONLIBS	     += $(top_builddir)/baselib/libopenhpi.la
 CLIENTS_SRC 	     = clients.c
 
 bin_PROGRAMS = \
+	hpidomain \
 	hpievents \
 	hpifan \
         hpiinv \
@@ -32,6 +33,9 @@ include_HEADERS         =
 
 hpialarms_SOURCES   = hpialarms.c $(CLIENTS_SRC)
 hpialarms_LDADD     = $(COMMONLIBS) 
+
+hpidomain_SOURCES   	= hpidomain.c $(CLIENTS_SRC)
+hpidomain_LDADD     	= $(COMMONLIBS) 
 
 hpithres_SOURCES        = hpithres.c $(CLIENTS_SRC)
 hpithres_LDADD          = $(COMMONLIBS)
