--- a/openhpi/trunk/docs/man/Makefile.am
+++ b/openhpi/trunk/docs/man/Makefile.am
@@ -37,6 +37,7 @@ EXTRA_DIST		= openhpi.pod.7   openhpid.pod.8      \
                           hpithres.pod.1  hpiwdt.pod.1        \
                           hpievents.pod.1 hpionIBMblade.pod.1 \
                           hpisensor.pod.1 hpitop.pod.1 \
+			  hpidomain.pod.1 hpigensimdata.pod.1 \
 			  hpi_shell.pod.1
 
 
@@ -69,7 +70,8 @@ man_MANS = openhpi.7   openhpid.8      \
            hpithres.1  hpiwdt.1        \
            hpievents.1 hpionIBMblade.1 \
            hpisensor.1 hpitop.1        \
-	   hpi_shell.1
+	   hpidomain.1 hpigensimdata.1 \
+           hpi_shell.1
 
 clean-local: am_config_clean-local
 
