--- a/openhpi/trunk/configure.ac
+++ b/openhpi/trunk/configure.ac
@@ -148,6 +148,10 @@ AC_CHECK_LIB([ltdl], [lt_dlopen], [], [
 AC_CHECK_LIB([sysfs], [sysfs_get_mnt_path], [have_sysfs=yes])
 AC_CHECK_HEADER([sysfs/libsysfs.h], [], [have_sysfs=no])
 
+AC_ARG_WITH(net-snmp-config,
+    [[  --with-net-snmp-config=SCRIPT   run SCRIPT as net-snmp-config]],
+    [net_snmp_config=$withval])
+
 OH_CHECK_NETSNMP
 
 AC_CHECK_LIB([uuid], [uuid_generate], [have_uuid=yes], [
