--- a/openhpi/trunk/baselib/Makefile.am
+++ b/openhpi/trunk/baselib/Makefile.am
@@ -21,11 +21,12 @@ INCLUDES 		= \
 	@OPENHPI_INCLUDES@  -I$(top_srcdir)/transport -I$(top_srcdir)/marshal @OH_SSL_INCLUDES@
 
 EXTRA_DIST		= \
-	oh_client.h oh_client_conf.h oh_client_session.h
+	conf.h init.h lock.h session.h
 
 lib_LTLIBRARIES	        = libopenhpi.la
 
-libopenhpi_la_SOURCES = oh_client.cpp oh_client_session.cpp oh_client_conf.c
+libopenhpi_la_SOURCES = conf.c init.cpp lock.c ohpi.cpp safhpi.cpp session.cpp
+
 
 libopenhpi_la_LDFLAGS = -version-info @HPI_LIB_VERSION@
 libopenhpi_la_LIBADD  = $(top_builddir)/transport/libopenhpitransport.la -lstdc++ \
