More on feature request #3129960
To avoid mixup with global config.h openhpid/config.c renamed to openhpid/conf.c

--- a/openhpi/trunk/openhpid/Makefile.am
+++ b/openhpi/trunk/openhpid/Makefile.am
@@ -28,7 +28,7 @@ EXTRA_DIST		= \
 
 # daemon library
 noinst_LTLIBRARIES      = libopenhpidaemon.la
-libopenhpidaemon_la_SOURCES        = config.c \
+libopenhpidaemon_la_SOURCES        = conf.c \
                                      domain.c \
                                      event.c \
                                      threaded.c \
