More on feature request #3031797 Add windows build files to "make dist" target

--- a/openhpi/trunk/Makefile.am
+++ b/openhpi/trunk/Makefile.am
@@ -44,6 +44,10 @@ EXTRA_DIST              = openhpi.spec.in \
 	simulation.data.example \
 	openhpiclient.conf.example \
 	README.daemon \
+	README.windows \
+	Makefile.mingw32 \
+	Makefile.mingw32.def \
+	mingw32/config.h \
         $(shell find $(srcdir)/include -name '*.h')
 
 AUTOMAKE_OPTIONS        = foreign
