--- a/openhpi/trunk/openhpid/Makefile.am
+++ b/openhpi/trunk/openhpid/Makefile.am
@@ -24,7 +24,7 @@ SUBDIRS = t
 DIST_SUBDIRS = t
 
 EXTRA_DIST		= \
-	openhpid.sh.in server.h
+	Makefile.mingw32 openhpid.sh.in server.h
 
 # daemon library
 noinst_LTLIBRARIES      = libopenhpidaemon.la
