--- a/openhpi/trunk/transport/Makefile.am
+++ b/openhpi/trunk/transport/Makefile.am
@@ -16,6 +16,8 @@
 
 MAINTAINERCLEANFILES 	= Makefile.in *~
 
+EXTRA_DIST = Makefile.mingw32
+
 INCLUDES 		= @OPENHPI_INCLUDES@
 # just to clear LIBS
 LIBS			=
