--- a/openhpi/trunk/Makefile.mingw32
+++ b/openhpi/trunk/Makefile.mingw32
@@ -29,12 +29,12 @@ out: all
 	cat include/SaHpi.h | sed -e 's/ __attribute__.*/;/' -e 's/#define SAHPI_API/#define SAHPI_API __declspec(dllimport)/' > ${out}/SaHpi.h
 	cp include/oHpi.h ${out}
 	cp utils/libopenhpiutils-${VERSION}.dll ${out}/
-	cp utils/libopenhpiutils-${VERSION}.dll.a ${out}/
-	cp utils/libopenhpiutils-${VERSION}.dll.def ${out}/
+	cp utils/libopenhpiutils-${VERSION}.a ${out}/
+	cp utils/libopenhpiutils-${VERSION}.def ${out}/
 	cp transport/libopenhpitransport-${VERSION}.dll ${out}/
 	cp marshal/libopenhpimarshal-${VERSION}.dll ${out}/
 	cp baselib/libopenhpi-${VERSION}.dll ${out}/
-	cp baselib/libopenhpi-${VERSION}.dll.a ${out}/
-	cp baselib/libopenhpi-${VERSION}.dll.def ${out}/
+	cp baselib/libopenhpi-${VERSION}.a ${out}/
+	cp baselib/libopenhpi-${VERSION}.def ${out}/
 	cp clients/*.exe ${out}/
 
