--- a/openhpi/trunk/utils/Makefile.mingw32
+++ b/openhpi/trunk/utils/Makefile.mingw32
@@ -24,9 +24,9 @@ all : ${TARGET}
 
 ${TARGET} : ${OBJ}
 	${CC} -shared -o $@ $^ ${GLIB_LIBS} \
-    -Wl,--out-implib,$@.a \
-    -Wl,--output-def,$@.def
+    -Wl,--out-implib,${@:.dll=.a} \
+    -Wl,--output-def,${@:.dll=.def}
 
 clean:
-	rm -f ${OBJ} ${TARGET}
+	rm -f ${OBJ} ${TARGET} ${TARGET:.dll=.a} ${TARGET:.dll=.def}
 
