--- a/openhpi/trunk/marshal/t/Makefile.am
+++ b/openhpi/trunk/marshal/t/Makefile.am
@@ -21,6 +21,8 @@ MOSTLYCLEANFILES 	= $(REMOTE_SOURCES) $(MARSHAL_SOURCES) @TEST_CLEAN@
 
 MAINTAINERCLEANFILES 	= Makefile.in *~
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
+
 INCLUDES		= -I $(MARSHAL_SRCDIR) @OPENHPI_INCLUDES@
 
 noinst_PROGRAMS = float_format
