--- a/openhpi/trunk/plugins/simulator/Makefile.am
+++ b/openhpi/trunk/plugins/simulator/Makefile.am
@@ -19,6 +19,8 @@ SUBDIRS = t
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"sim\"
+
 INCLUDES		= @OPENHPI_INCLUDES@
 
 pkglib_LTLIBRARIES	= libsimulator.la
