--- a/openhpi/trunk/plugins/snmp_bc/Makefile.am
+++ b/openhpi/trunk/plugins/snmp_bc/Makefile.am
@@ -10,6 +10,8 @@
 
 MAINTAINERCLEANFILES = Makefile.in
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"snmp_bc\"
+
 # Generated files - need to keep in sync with t/Makefile.am
 GENERATED_EVENT_XML_MAP = event.xml
 GENERATED_EVENT_CODE = el2event.c
