--- a/openhpi/trunk/plugins/snmp_bc/t/Makefile.am
+++ b/openhpi/trunk/plugins/snmp_bc/t/Makefile.am
@@ -40,6 +40,8 @@ MOSTLYCLEANFILES += $(GENERATED_CODE)
 
 MAINTAINERCLEANFILES = Makefile.in
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
+
 SNMPUTILSDIR = $(top_srcdir)/$(SNMPDIR)
 
 INCLUDES = \
