--- a/openhpi/trunk/snmp/Makefile.am
+++ b/openhpi/trunk/snmp/Makefile.am
@@ -10,6 +10,8 @@
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"snmp\"
+
 INCLUDES		= @OPENHPI_INCLUDES@
 
 AM_CFLAGS		= @SNMPFLAGS@
