--- a/openhpi/trunk/ssl/Makefile.am
+++ b/openhpi/trunk/ssl/Makefile.am
@@ -10,6 +10,8 @@
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"ssl\"
+
 INCLUDES		= @OPENHPI_INCLUDES@
 
 lib_LTLIBRARIES		= libopenhpi_ssl.la
