--- a/openhpi/trunk/utils/t/ann/Makefile.am
+++ b/openhpi/trunk/utils/t/ann/Makefile.am
@@ -25,6 +25,8 @@ REMOTE_SOURCES       = announcement_utils.c \
 
 MOSTLYCLEANFILES     = $(shell ls *data) $(REMOTE_SOURCES) @TEST_CLEAN@
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
+
 INCLUDES             = @OPENHPI_INCLUDES@
 
 $(REMOTE_SOURCES):
