--- a/openhpi/trunk/utils/t/uid/Makefile.am
+++ b/openhpi/trunk/utils/t/uid/Makefile.am
@@ -24,6 +24,8 @@ MOSTLYCLEANFILES 	= @TEST_CLEAN@ \
 	                  $(REMOTE_SOURCES) \
 			  uid_map
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
+
 INCLUDES		= @OPENHPI_INCLUDES@
 
 $(REMOTE_SOURCES):
