--- a/openhpi/trunk/cpp/Makefile.am
+++ b/openhpi/trunk/cpp/Makefile.am
@@ -18,6 +18,8 @@ DIST_SUBDIRS            = t
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"cpp\"
+
 INCLUDES		= @OPENHPI_INCLUDES@
 
 includedir=$(base_includedir)/openhpi
