--- a/openhpi/trunk/plugins/ipmidirect/Makefile.am
+++ b/openhpi/trunk/plugins/ipmidirect/Makefile.am
@@ -31,6 +31,8 @@
 
 MAINTAINERCLEANFILES    = Makefile.in *~ core core.*
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"ipmidirect\"
+
 INCLUDES                = @OPENHPI_INCLUDES@ 
 
 SUBDIRS                 = t
