--- a/openhpi/trunk/plugins/ipmidirect/t/Makefile.am
+++ b/openhpi/trunk/plugins/ipmidirect/t/Makefile.am
@@ -39,6 +39,8 @@ MAINTAINERCLEANFILES 	= Makefile.in *~
 
 CLEANFILES		= @CLEANFILES@ $(MOSTLYCLEANFILES)
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
+
 INCLUDES		= @OPENHPI_INCLUDES@ -I$(top_srcdir)/plugins/ipmidirect
 
 
