--- a/openhpi/trunk/plugins/rtas/Makefile.am
+++ b/openhpi/trunk/plugins/rtas/Makefile.am
@@ -15,6 +15,8 @@
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"rtas\"
+
 INCLUDES		= @OPENHPI_INCLUDES@ 
 
 pkglib_LTLIBRARIES	= librtas2hpi.la 
