--- a/openhpi/trunk/plugins/simulator/t/Makefile.am
+++ b/openhpi/trunk/plugins/simulator/t/Makefile.am
@@ -11,6 +11,8 @@
 MOSTLYCLEANFILES 	= @TEST_CLEAN@ uid_map
 EXTRA_DIST              = openhpi.conf
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
+
 INCLUDES		= @OPENHPI_INCLUDES@
 
 MAINTAINERCLEANFILES 	= Makefile.in
