--- a/openhpi/trunk/utils/t/el/Makefile.am
+++ b/openhpi/trunk/utils/t/el/Makefile.am
@@ -28,6 +28,8 @@ MOSTLYCLEANFILES     = $(shell ls *data) $(REMOTE_SOURCES) @TEST_CLEAN@
 
 CLEANFILES           = $(top_builddir)/src/t/el/elTest.data
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
+
 INCLUDES             = @OPENHPI_INCLUDES@
 
 $(REMOTE_SOURCES):
