--- a/openhpi/trunk/utils/t/epath/Makefile.am
+++ b/openhpi/trunk/utils/t/epath/Makefile.am
@@ -44,6 +44,8 @@ REMOTE_SOURCES = \
 
 MOSTLYCLEANFILES = $(REMOTE_SOURCES) @TEST_CLEAN@
 
+AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
+
 INCLUDES = @OPENHPI_INCLUDES@
 
 $(REMOTE_SOURCES):
