--- a/openhpi/trunk/ssl/Makefile.am
+++ b/openhpi/trunk/ssl/Makefile.am
@@ -16,8 +16,6 @@ INCLUDES		= @OPENHPI_INCLUDES@
 
 lib_LTLIBRARIES		= libopenhpi_ssl.la
 
-EXTRA_DIST = oh_ssl.h
-
-libopenhpi_ssl_la_SOURCES = oh_ssl.c
+libopenhpi_ssl_la_SOURCES = oh_ssl.c oh_ssl.h
 
 libopenhpi_ssl_la_LDFLAGS = -version-info @HPI_LIB_VERSION@ @CRYPTO_LIB@
