--- a/openhpi/trunk/utils/Makefile.am
+++ b/openhpi/trunk/utils/Makefile.am
@@ -47,18 +47,7 @@ GENERATED_SRC_FILES = \
 
 GENERATED_FILES = $(GENERATED_HEADER_FILES) $(GENERATED_SRC_FILES)
 
-EXTRA_DIST = \
-		Makefile.mingw32 \
-		$(GENERATED_HEADER_FILES) \
-		announcement_utils.h \
-		el_utils.h \
-		epath_utils.h \
-		oh_utils.h \
-		rpt_utils.h \
-		sahpi_event_utils.h \
-		sahpi_struct_utils.h \
-		sahpi_time_utils.h \
-		uid_utils.h
+EXTRA_DIST = Makefile.mingw32
 
 MOSTLYCLEANFILES = @TEST_CLEAN@
 # FIXME:: Add when we can auto-generate files for SMP systems
@@ -76,15 +65,25 @@ lib_LTLIBRARIES = libopenhpiutils.la
 
 # Generated files (e.g.sahpi_enum_utils.c) must be listed first
 libopenhpiutils_la_SOURCES = \
-			$(GENERATED_SRC_FILES) \
-			announcement_utils.c \
-			el_utils.c \
-			epath_utils.c \
-			rpt_utils.c \
-			sahpi_event_utils.c \
-			sahpi_struct_utils.c \
-			sahpi_time_utils.c \
-			uid_utils.c
+    $(GENERATED_SRC_FILES) \
+    $(GENERATED_HEADER_FILES) \
+    announcement_utils.c \
+    announcement_utils.h \
+    el_utils.c \
+    el_utils.h \
+    epath_utils.c \
+    epath_utils.h \
+    oh_utils.h \
+    rpt_utils.c \
+    rpt_utils.h \
+    sahpi_event_utils.c \
+    sahpi_event_utils.h \
+    sahpi_struct_utils.c \
+    sahpi_struct_utils.h \
+    sahpi_time_utils.c \
+    sahpi_time_utils.h \
+    uid_utils.c \
+    uid_utils.h
 
 libopenhpiutils_la_LDFLAGS = -version-info @HPI_LIB_VERSION@
 libopenhpiutils_la_LIBADD =
